syntax = "proto3";
package api;

import "empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "api/protobuf";

message MeasurementEvent {
  string peripheralId = 1;
  string deploymentId = 2;
  int32 value = 3;
  google.protobuf.Timestamp time_stamp = 4;
}

message MeasurementEventFilterRequest {
  repeated string peripheralIds = 1;
  string deploymentId = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
}

service PeripheralMeasurementEventService {
  rpc SendEvent(MeasurementEvent) returns (Empty);
  rpc FilterEvents(MeasurementEventFilterRequest) returns (stream MeasurementEvent);
}
